@@ -41,7 +41,7 @@
 #include <dmalloc.h>
 #endif
 
-TDS_RCSID(var, "$Id: token.c,v 1.321 2006-09-26 21:00:14 jklowden Exp $");
+TDS_RCSID(var, "$Id: token.c,v 1.322 2006-10-11 14:37:34 freddy77 Exp $");
 
 static int tds_process_msg(TDSSOCKET * tds, int marker);
 static int tds_process_compute_result(TDSSOCKET * tds);
@@ -1735,16 +1735,16 @@ tds5_process_result(TDSSOCKET * tds)
 			break;
 		}
 
-		/* Adjust column size according to client's encoding */
-		curcol->on_server.column_size = curcol->column_size;
-		adjust_character_column_size(tds, curcol);
-
 		/* numeric and decimal have extra info */
 		if (is_numeric_type(curcol->column_type)) {
 			curcol->column_prec = tds_get_byte(tds);	/* precision */
 			curcol->column_scale = tds_get_byte(tds);	/* scale */
 			/* FIXME check prec/scale, don't let server crash us */
 		}
+
+		/* Adjust column size according to client's encoding */
+		curcol->on_server.column_size = curcol->column_size;
+		adjust_character_column_size(tds, curcol);
 
 		/* discard Locale */
 		tds_get_n(tds, NULL, tds_get_byte(tds));
